# Claude-Code-Lab---AIC1101

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json  settings.local.example.json
.github/workflows/: ci.yml
data/fixtures/: statuspage_sample.json
docs/: architecture.md  mcp-playbook.md
scripts/: bootstrap.sh  run_dev.sh
src/context7_status_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/status_bridge/: app.py  cli.py  config.py  db.py  feeds.py  models.py  repository.py  service.py
src/status_bridge/api/: health.py  incidents.py
tests/: test_api_incidents.py  test_feeds.py  test_health.py  test_service.py
