[project]
name = "context7-status-bridge"
version = "0.1.0"
description = "MCP-focused starter repo for Claude Code labs built around a small status-feed integration service."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "uvicorn>=0.30.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "ruff>=0.6.0,<1.0.0"
]

[project.scripts]
status-bridge = "status_bridge.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
